--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.13",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.13",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^2.1.6",
+        "@vitejs/plugin-react": "^5.0.3",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "typescript": "^5.9.2"
     }
 }
