--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.6",
+        "postcss-preset-mantine": "^1.18.0",
+        "postcss-simple-vars": "^7.0.1",
         "tailwindcss": "^4.1.13",
         "vite": "^6.2.4"
     },
     "dependencies": {
         "@inertiajs/react": "^2.1.6",
+        "@mantine/core": "^8.3.1",
+        "@mantine/hooks": "^8.3.1",
         "@vitejs/plugin-react": "^5.0.3",
+        "lucide-react": "^0.544.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "typescript": "^5.9.2"
