--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -12,8 +12,8 @@ services:
       APP_KEY: ${APP_KEY}
       # DB
       DB_CONNECTION: mysql
-      DB_HOST: db
-      DB_PORT: 3306
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
       DB_DATABASE: ${DB_DATABASE}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
