--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -17,6 +17,25 @@ services:
       DB_DATABASE: ${DB_DATABASE}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
+
+      HP_LOGIN: ${HP_LOGIN}
+      HP_PASS: ${HP_PASS}
+      HP_BASE_URL: ${HP_BASE_URL}
+
+      # HORIZON
+      HORIZON_DOMAIN: ${HORIZON_DOMAIN}
+      HORIZON_PATH: ${HORIZON_PATH}
+      HORIZON_PREFIX: ${HORIZON_PREFIX}
+
+      # MATRIX
+      MATRIX_BASE: ${MATRIX_BASE}
+      MATRIX_MANDATORY_NUMBER: ${MATRIX_MANDATORY_NUMBER}
+      MATRIX_INTERFACE_NUMBER: ${MATRIX_INTERFACE_NUMBER}
+      MATRIX_PASSWORD: ${MATRIX_PASSWORD}
+      MATRIX_API_KEY: ${MATRIX_API_KEY}
+
+      MATRIX_RETRY_ATTEMPTS: ${MATRIX_RETRY_ATTEMPTS}
+      MATRIX_RETRY_DELAY_MS: ${MATRIX_RETRY_DELAY_MS}
       # Activer si tu veux migrer en boot (déploiements contrôlés)
       RUN_MIGRATIONS: "true"
     depends_on:
