--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -48,6 +48,18 @@ services:
     # volumes:
     #   - app_logs:/var/www/html/storage/logs
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   db:
     image: mysql:8
     environment:
@@ -65,4 +77,4 @@ services:
 
 volumes:
   db_data:
-  # app_logs:
+  redis_data:
