fix: add redis host to app

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -27,6 +27,11 @@ services:
       HORIZON_PATH: ${HORIZON_PATH}
       HORIZON_PREFIX: ${HORIZON_PREFIX}
 
+      # REDIS
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+
       # MATRIX
       MATRIX_BASE: ${MATRIX_BASE}
       MATRIX_MANDATORY_NUMBER: ${MATRIX_MANDATORY_NUMBER}
