--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -9,6 +9,7 @@ services:
       APP_DEBUG: "false"
       APP_URL: ${APP_URL}
       APP_KEY: ${APP_KEY}
+      QUEUE_CONNECTION: redis
       # DB
       DB_CONNECTION: mysql
       DB_HOST: ${DB_HOST}
@@ -61,6 +62,56 @@ services:
       APP_DEBUG: "false"
       APP_URL: ${APP_URL}
       APP_KEY: ${APP_KEY}
+      QUEUE_CONNECTION: redis
+      # DB
+      DB_CONNECTION: mysql
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+
+      HP_LOGIN: ${HP_LOGIN}
+      HP_PASS: ${HP_PASS}
+      HP_BASE_URL: ${HP_BASE_URL}
+
+      # HORIZON
+      HORIZON_DOMAIN: ${HORIZON_DOMAIN}
+      HORIZON_PATH: ${HORIZON_PATH}
+      HORIZON_PREFIX: ${HORIZON_PREFIX}
+
+      # REDIS
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+
+      # MATRIX
+      MATRIX_BASE: ${MATRIX_BASE}
+      MATRIX_MANDATORY_NUMBER: ${MATRIX_MANDATORY_NUMBER}
+      MATRIX_INTERFACE_NUMBER: ${MATRIX_INTERFACE_NUMBER}
+      MATRIX_PASSWORD: ${MATRIX_PASSWORD}
+      MATRIX_API_KEY: ${MATRIX_API_KEY}
+      MATRIX_RETRY_ATTEMPTS: ${MATRIX_RETRY_ATTEMPTS}
+      MATRIX_RETRY_DELAY_MS: ${MATRIX_RETRY_DELAY_MS}
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+
+  scheduler:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+    image: hypermatrix-app:prod
+    command: php artisan schedule:work
+    environment:
+      APP_ENV: production
+      APP_DEBUG: "false"
+      APP_URL: ${APP_URL}
+      APP_KEY: ${APP_KEY}
+      QUEUE_CONNECTION: redis
       # DB
       DB_CONNECTION: mysql
       DB_HOST: ${DB_HOST}
