--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -176,6 +176,28 @@ services:
     volumes:
       - db_data:/var/lib/mysql
 
+
+  n8n:
+    image: docker.n8n.io/n8nio/n8n
+    restart: always
+    environment:
+      - DB_TYPE=mysql
+      - DB_MYSQL_HOST=db
+      - DB_MYSQL_PORT=3306
+      - DB_MYSQL_DATABASE=n8n
+      - DB_MYSQL_USER=n8n
+      - DB_MYSQL_PASSWORD=${DB_N8N_PASSWORD}
+    ports:
+      - 5678:5678
+    links:
+      - db
+    volumes:
+      - n8n_storage:/home/node/.n8n
+    depends_on:
+      db:
+        condition: service_healthy
+
 volumes:
   db_data:
   redis_data:
+  n8n_storage:
